Adjust project structure and package.json for deployment on Render

--- a/Develop/package.json
+++ b/Develop/package.json
@@ -6,7 +6,7 @@
     "start:dev": "concurrently \"npm run server\" \"cd client && npm run dev\"",
     "start": "node server/server.js",
     "server": "nodemon server/server.js",
-    "build": "cd client && npm run build"
+    "build": "cd client && npm install && npm run build"
   },
   "dependencies": {
     "express": "^4.19.2",
