--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jate",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "server/server.js",
   "scripts": {
     "start:dev": "concurrently \"npm run server\" \"cd client && npm run dev\"",
     "start": "node server/server.js",
