--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.24.7",
     "@babel/runtime": "^7.15.3",
     "babel-loader": "^8.3.0",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.11.0",
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^3.3.4",
