--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "build": "cd client && npm run build"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "webpack": "^5.92.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.11.1",
-    "webpack-pwa-manifest": "^4.3.0",
-    "workbox-webpack-plugin": "^7.1.0"
+    "express": "^4.19.2"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "webpack": "^5.92.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
+    "webpack-pwa-manifest": "^4.3.0",
+    "workbox-webpack-plugin": "^7.1.0"
   },
   "description": ""
 }
